--- a/_site.yml
+++ b/_site.yml
@@ -9,5 +9,5 @@ navbar:
     - text: "Teaching"
       href: teaching.html
     - text: "CV"
-      href: CV_october.pdf
+      href: CV.pdf
 output_dir: docs
